zarf/k8s/base/sales/base-sales.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sales-system

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales
  namespace: sales-system
spec:
  selector:
    matchLabels:
      app: sales
  template:
    metadata:
      labels:
        app: sales
    spec:
      containers:
      - name: sales-api
        image: service-image
        ports:
          - name: sales-api
            containerPort: 3000
          - name: sales-api-debug
            containerPort: 4000
---

apiVersion: v1
kind: Service
metadata:
  name: sales-api
  namespace: sales-system

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sales-api
  namespace: sales-system
spec:
  ingressClassName: nginx
  rules:
    - host: sales-debug-api.iron1.debotjes.nl
      http:
        paths:
          - backend:
              service:
                name: sales-api
                port:
                  number: 4000
            path: /
            pathType: Prefix

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sales-api
  namespace: sales-system
spec:
  ingressClassName: nginx
  rules:
    - host: sales-api.iron1.debotjes.nl
      http:
        paths:
          - backend:
              service:
                name: sales-api
                port:
                  number: 3000
            path: /
            pathType: Prefix
